--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,13 +1,14 @@
+/bankaccounts/
 /bitmanipulation/
+/comparable/
 /geeksForGeeks/
 /google/
 /hackerrank/
+/hashMapImpl/
+/hashTable/
 /linkedlists/
+/mutlithreading/
 /queue/
 /stacks/
 /strings/
 /treesAndGraphs/
-/hashTable/
-/bankaccounts/
-/hashMapImpl/
-/comparable/
