--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,4 @@
+/bankaccounts/
+/bitmanipulation/
+/comparable/
 /geeksForGeeks/
-/google/
-/hackerrank/
-/hashMapImpl/
-/hashTable/
-/linkedlists/
-/mutlithreading/
-/queue/
-/stacks/
-/strings/
-/treesAndGraphs/
